@@ -1,3 +1,7 @@
+Fri Aug 15 11:44:13 MESZ 1997  Kai Krueger <krueger@mathematik.uni-kl.de>
+	* ndbm.cc: fix open-bug  for dos
+	  default mode of open is ascii, we need binary mode.
+
 Thu Aug 14 18:04:04 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
 	and anne
 
